feat: Phase F — AI-Adapter + Cleanup (Pipeline-Finale)
- VanillaAIAdapter: ClassResolver für 6 package-private Plan-Klassen
  (Humanoid.class.getClassLoader(), KEIN FieldAccessor nötig)
- EconConfig.useMethodHandleAdapters: GELÖSCHT (alle Adapter auto-select)
- AdapterReflectionBenchmark: auf BypassGate-SDK aktualisiert
- EconomySim: Imports bereinigt, keine MH-/Fallback-Referenzen mehr
- ARCHITECTURE.md: finale Datei-Zahl 14 (10 adapter + 4 seam)
- ROADMAP.md: Phase A-F als DONE markiert
- v0.13.8→0.13.9 propagiert

Pipeline-Statistik:
  Start: 17 adapter + 0 seam = 17 Dateien
  Phase A: +4 seam
  Phase B-F: −7 (4 Fallbacks + 3 MH-Varianten)
  Final: 10 adapter + 4 seam = 14 Dateien
  useMethodHandleAdapters: 1 Flag gelöscht

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>